--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,17 @@ language: java
 
 install:
   - mvn clean test -B -V
+
+## import GPG codes
+before_install:
+  - openssl aes-256-cbc -K $encrypted_e586968263a2_key -iv $encrypted_e586968263a2_iv -in gpg-secret-keys.enc -d | $GPG_EXECUTABLE --import
+  - openssl aes-256-cbc -K $encrypted_e586968263a2_key -iv $encrypted_e586968263a2_iv -in build-resources/gpg-ownertrust.enc -d | $GPG_EXECUTABLE --import-ownertrust
+
 after_success:
   - mvn -DrepoToken=$COVERALLS_TOKEN coveralls:report
+
+deploy:
+  provider: script
+  script: bash build-resources/travis-release.sh
+  on:
+    branch: master
