--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,22 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.vmware.test-operations</groupId>
     <artifactId>test-operations</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.9-SNAPSHOT</version>
 
     <packaging>jar</packaging>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:https://github.com/vmware/test-operations.git</connection>
+        <url>https://github.com/vmware/test-operations</url>
+    </scm>
 
     <!--
        Maven command to create a test-jar that can be used in other
@@ -14,6 +27,10 @@
       -->
     <build>
         <plugins>
+
+            <!--
+              Unit testing
+             -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
@@ -22,6 +39,7 @@
                     <argLine>${surefireArgLine}</argLine>
                 </configuration>
             </plugin>
+
             <!--
               Create code coverage reports when testing
              -->
@@ -60,6 +78,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <!--
               Maven plugin to publish JaCoco reports to Coveralls
              -->
@@ -71,6 +90,7 @@
                     <repoToken>${env.COVERALLS_TOKEN}</repoToken>
                 </configuration>
             </plugin>
+
             <!--
               Maven command to create a test-jar that can be used in other
               projects
@@ -96,7 +116,53 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+        <!-- Test only JARs -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.11.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.11.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.11.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <profiles>
+        <!--
+          '!skipChecks' profile
+
+          This profile is used to defeat standard style checking for quick builds.  Do not
+          submit source code that does not pass the style checks!
+         -->
         <profile>
             <id>checkstyle</id>
             <activation>
@@ -138,45 +204,97 @@
                 </plugins>
             </build>
         </profile>
+
+        <!--
+          'release' profile
+
+          This profile is used to prepare and deploy final builds for distribution on Sonatype.
+          For detailed instructions, see https://central.sonatype.org/pages/apache-maven.html#performing-a-release-deployment
+         -->
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <!--
+                      Maven Release Plugin
+
+                      To release this project, run:
+                        mvn -P release release:prepare
+
+                      And respond to the prompts as they are given.  When Travis-ci detects a release version
+                      in the POM, it will automatically deploy it to Sonatype.
+                     -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <version>2.5.3</version>
+                    </plugin>
+
+                    <!--
+                       Configure the source JAR file
+                      -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!--
+                      Configure the Javadoc JAR file
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                     -->
+
+                    <!--
+                     Sign the components using GPG, so that they can be deployed to Sonatype
+                    -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
-        <!-- Test only JARs -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.8.2</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 </project>
