--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ install:
 
 ## import GPG codes
 before_install:
-  - openssl aes-256-cbc -K $encrypted_e586968263a2_key -iv $encrypted_e586968263a2_iv -in build-resources/gpg-secret-keys.enc -out build-resources/gpg-secret-keys -d
-  - cat build-resources/gpg-secret-keys | $GPG_EXECUTABLE --import
-  - openssl aes-256-cbc -K $encrypted_e586968263a2_key -iv $encrypted_e586968263a2_iv -in build-resources/gpg-ownertrust.enc -out build-resources/gpg-ownertrust -d
-  - cat build-resources/gpg-ownertrust | $GPG_EXECUTABLE --import-ownertrust
+  - openssl aes-256-cbc -K $encrypted_5880cf525281_key -iv $encrypted_5880cf525281_iv -in build-resources/gpg_files.tar.enc -out gpg_files.tar -d
+  - tar -f gpg_files.tar -xO gpg-secret-keys | $GPG_EXECUTABLE --import
+  - tar -f gpg_files.tar -xO gpg-ownertrust | $GPG_EXECUTABLE --import-ownertrust
 
 after_success:
   - mvn -DrepoToken=$COVERALLS_TOKEN coveralls:report
