--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
           submit source code that does not pass the style checks!
          -->
         <profile>
-            <id>checkstyle</id>
+            <id>code-checking</id>
             <activation>
                 <property>
                     <name>!skipChecks</name>
@@ -202,7 +202,7 @@
                             <dependency>
                                 <groupId>com.puppycrawl.tools</groupId>
                                 <artifactId>checkstyle</artifactId>
-                                <version>6.11.1</version>
+                                <version>8.12</version>
                             </dependency>
                         </dependencies>
                         <executions>
@@ -221,6 +221,32 @@
                             <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                         </configuration>
+                    </plugin>
+
+                    <!-- This configures the spotbugs plugin for Java static code checking -->
+                    <plugin>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs-maven-plugin</artifactId>
+                        <version>3.1.6</version>
+                        <configuration>
+                            <effort>High</effort>
+                            <threshold>Low</threshold>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+                            <dependency>
+                                <groupId>com.github.spotbugs</groupId>
+                                <artifactId>spotbugs</artifactId>
+                                <version>3.1.6</version>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
