Also update mvn target for travis
This will run spotbugs as part of the CI process.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - tar -f gpg_files.tar -xO gpg-ownertrust | $GPG_EXECUTABLE --import-ownertrust
 
 install:
-  - mvn clean test -B -V
+  - mvn clean verify -B -V
 
 after_success:
   - mvn -DrepoToken=$COVERALLS_TOKEN coveralls:report
