--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
                         <version>3.1.6</version>
                         <configuration>
                             <effort>High</effort>
-                            <threshold>Low</threshold>
+                            <threshold>Default</threshold>
                         </configuration>
                         <executions>
                             <execution>
