--- a/test-utilities/pom.xml
+++ b/test-utilities/pom.xml
@@ -98,6 +98,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
 
         <!-- Test only JARs -->
         <dependency>
