--- a/test-operations/pom.xml
+++ b/test-operations/pom.xml
@@ -4,7 +4,7 @@
     <parent>
       <groupId>com.vmware.test-operations</groupId>
       <artifactId>test-operations-parent</artifactId>
-      <version>0.9.7-SNAPSHOT</version>
+      <version>0.9.7</version>
     </parent>
     <artifactId>test-operations</artifactId>
 
