--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ after_success:
 
 deploy:
   provider: script
-  script: bash build-resources/travis-release.sh
+  script: cd $TRAVIS_BUILD_DIR && bash build-resources/travis-release.sh
   on:
     branch: master
