--- a/test-operations/pom.xml
+++ b/test-operations/pom.xml
@@ -110,7 +110,7 @@
     <dependency>
       <groupId>com.vmware.test-operations</groupId>
       <artifactId>test-utilities</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
