--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ before_install:
   - cd $TRAVIS_BUILD_DIR && bash build-resources/extract_jar_signing_artifacts.sh $encrypted_e586968263a2_key $encrypted_e586968263a2_iv
 
 install:
-  - mvn -P release clean verify -B -V
-  - mvn -P release test jacoco:report
+  - [ "${TRAVIS_PULL_REQUEST}" = "false" ] && mvn -P release clean verify -B -V
+  - [ "${TRAVIS_PULL_REQUEST}" = "false" ] && mvn clean verify -B -V
+  - mvn test jacoco:report
 
 after_success:
   - if [ "$COVERALLS_TOKEN" != "" ]; then cd $TRAVIS_BUILD_DIR/test-operations && mvn -P release -DrepoToken=$COVERALLS_TOKEN coveralls:report; fi
