--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: java
 
+# Extract the signing certificates if the encrypted environment variables are passed by travis.
 before_install:
   - cd $TRAVIS_BUILD_DIR && bash build-resources/extract_jar_signing_artifacts.sh $encrypted_e586968263a2_key $encrypted_e586968263a2_iv
 
+# The tests ensure that signed jars (built as part of release builds) are not built on pull requests, only
+# mainline builds.
 install:
-  - '[ "${TRAVIS_PULL_REQUEST}" != "false" ] && mvn clean verify -B -V'
-  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && mvn -P release clean verify -B -V'
+  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] || mvn clean verify -B -V'
+  - '[ "${TRAVIS_PULL_REQUEST}" != "false" ] || mvn -P release clean verify -B -V'
   - mvn test jacoco:report
 
 after_success:
